[gd_scene load_steps=7 format=3 uid="uid://ilcwjcu5h1uv"]

[ext_resource type="Script" path="res://Scripts/game_end_screen.gd" id="1_dg2pr"]
[ext_resource type="Texture2D" uid="uid://daosyngm7bytx" path="res://Graphics/menu_background.JPEG" id="2_sly0j"]
[ext_resource type="StyleBox" uid="uid://c3t2q1kb70wu0" path="res://Styles/normal_button.tres" id="2_tj1q0"]
[ext_resource type="AudioStream" uid="uid://c7l58t6ax3dj" path="res://Audio/menu_background.mp3" id="3_a7kxf"]
[ext_resource type="PackedScene" uid="uid://caum51wr7vftu" path="res://Scenes/mouse_cursor.tscn" id="4_xeas8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lgodu"]
bg_color = Color(0.576471, 0.254902, 0.270588, 0.462745)

[node name="GameEndScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dg2pr")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 416.0
offset_top = -1144.0
offset_right = 1056.0
offset_bottom = -784.0
grow_horizontal = 2
grow_vertical = 2
rotation = 0.834641
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_sly0j")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_lgodu")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -198.5
offset_top = -91.0
offset_right = 198.5
offset_bottom = 91.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="EndText" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 50
text = "You win!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreText2" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
text = "cat."
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreText" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
text = "You kept x yarn balls"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 10

[node name="Replay" type="Button" parent="Panel/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = ExtResource("2_tj1q0")
text = "Restart
"

[node name="MainMenu" type="Button" parent="Panel/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = ExtResource("2_tj1q0")
text = " Main Menu "

[node name="MenuBackgroundMusic" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("3_a7kxf")
volume_db = -12.0
bus = &"music"

[node name="mouse_cursor" parent="." instance=ExtResource("4_xeas8")]

[connection signal="pressed" from="Panel/VBoxContainer/VBoxContainer/Replay" to="." method="_on_replay_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/VBoxContainer/MainMenu" to="." method="_on_main_menu_pressed"]
